--- a/list-prac.html
+++ b/list-prac.html
@@ -7,7 +7,15 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="root"></div>
-  <script src="./js/nv_copy.js"></script>
+  <div id="root">
+    <ul id="menu">
+      <li>items-1</li>
+      <li>items-2</li>
+      <li>items-3</li>
+      <li>items-4</li>
+      <li>items-5</li>
+    </ul>
+  </div>
+  <script src="./js/list-prac.js"></script>
 </body>
 </html>
